# agent-pulse

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  debugs.md  package-lock.json  package.json
.claude/: release-checklist.md
.claude/skills/release-checklist/: SKILL.md
.github/workflows/: deploy.yml  test.yml
src/: capsule.js  index.html  styles.css
src-tauri/: Cargo.toml  deb-prerm.sh  nsis-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  hooks_config.rs  lib.rs  main.rs  opencode_hooks.rs  process_monitor.rs  session_manager.rs  settings.rs  tray.rs  webhook_server.rs
src-tauri/src/providers/: claude.rs  mod.rs  opencode.rs
