[package]
name = "agent-pulse"
version = "0.0.2"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
dirs = "6"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "agent_pulse"
crate-type = ["lib", "cdylib", "staticlib"]
